syntax = "proto3";

package ankadbpb;

enum CODE {
    OK = 0;

    VAR_PARSE_ERR = 1;
    LOGIC_ONQUERY_ERR = 2;
    CTX_CURDB_ERR = 3;
    PROTOBUF_ENCODE_ERR = 4;
    DB_PUT_ERR = 5;

    CLIENT_NO_CONN = 10000;

    INVALID_CODE = 20000;
}

message Query {
    string name = 1;
    string queryData = 2;
    string varData = 3;
}

message ReplyQuery {
    CODE code = 1;
    string err = 2;
    string result = 3;
}

service AnkaDBServ {
    rpc query (Query) returns (ReplyQuery) {}
}